[tool.poetry]
name = "topgen"
version = "0.1.0"
description = "Time-based one-time password generator"
authors = ["Burak Yildiz <0byldz@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/byildiz/topgen"
keywords = ["totp", "totp-generator", "totp-cli", "google-authenticator"]
classifiers = [
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.10"
protobuf = "^4.24.3"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
ruff = "^0.0.287"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = ["E722"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"